# songon_tour

./: .env.example  .gitignore  Dockerfile  db.sqlite3  docker-compose.yml  manage.py  nginx.conf  pyproject.toml  requirements.in
DOCS/: 00_START_HERE.md  AUTHENTICATION_COMPLETE.md  AUTHENTICATION_SETUP.md  DETAILED_REPORT.md  DJANGO_COMMANDS.md  DOCKER_DEPLOYMENT.md  FILES_CREATED.md  FINAL_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  INTEGRATION_GUIDE.md  MODULE_STRUCTURE.md  QUICK_START.md  README_FIRST.md  START_HERE.txt  USAGE_EXAMPLES.md  VALIDATION_CHECKLIST.md
home/: urls.py
home/templates/home/: 404.html  about.html  become-volunteer.html  blog-details.html  blog-list.html  blog.html  cart.html  checkout.html  contact.html  donation-list.html  donation-single.html  donation.html  events-single.html  events.html  faq.html  index-2.html  index-3.html  index.html  portfolio.html  shop-details.html  shop.html  volunteers.html
home/templates/home/layout/: base.html  footer.html  header.html
recensement/: README.md  admin.py  forms.py  models.py  tests.py  urls.py  views.py
recensement/migrations/: 0001_initial.py
recensement/templates/recensement/: email_credentials.html  jeune_confirm_delete.html  jeune_detail.html  jeune_form.html  jeune_list.html  jeune_success.html
songon_tour/: asgi.py  settings.py  urls.py  wsgi.py
songon_tour/templates/registration/: login.html
